# mise-command-sequencer

./: .gitignore  CLAUDE.md  Cargo.toml  TASK_GROUPING_MIKADO_PREPLAN.md  TASK_GROUPING_PLAN.md  mise.toml  tarpaulin.toml
.trunk/: trunk.yaml
src/: main.rs
src/app/: event_handlers.rs  mod.rs  sequence_management.rs  task_management.rs
src/mise/: client.rs  mod.rs
src/models/: app_event.rs  app_state.rs  mise_task.rs  mod.rs  sequence.rs
src/terminal/: input.rs  mod.rs  setup.rs
src/ui/: button_layout.rs  constants.rs  mod.rs  sequence_builder.rs  task_detail.rs  task_list.rs  task_running.rs
