[package]
name = "mise-command-sequencer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "mise-command-sequencer"
path = "src/main.rs"
