[package]
name = "mise-command-sequencer"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7.0.0"
anyhow = "1.0.98"
env_logger = "0.11"
log = "0.4"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tui-input = "0.14.0"

[[bin]]
name = "mise-command-sequencer"
path = "src/main.rs"

[dev-dependencies]
cargo-tarpaulin = "0.32.8"

[lints.rust]
dead_code = "allow"
